# greenlens-detection-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  guide.md  main.py  pyproject.toml
.claude/: settings.json
.cursor/: hooks.json
.cursor/agents/: greenlens-api-v1.md  greenlens-contract-audit.md  greenlens-core-services.md  greenlens-debug.md  greenlens-docker-infra.md  greenlens-ml-artifacts.md  greenlens-scout.md  greenlens-test-br.md
.cursor/commands/: debug.md  excute.md  execute.md  fix.md  plan.md
.cursor/hooks/: shell-policy.py
.cursor/rules/: greenlens-ml.mdc  greenlens-overview.mdc  greenlens-python-api.mdc  greenlens-testing.mdc
app/: config.py  main.py
app/api/: deps.py
app/core/: pollution_classifier.py  report_image_relevance.py  scene_classifier.py  severity_estimator.py  training_jobs.py  trash_subtype_classifier.py
app/models/: classify.py  training.py
app/services/: storage_service.py
app/utils/: image_decode.py  logger.py
assets/: serve.py
docker/: Dockerfile  docker-compose.yml
docs/: AI_Service_Development_Plan.md  BE-AI-Integration-Flow.md  IMPLEMENTATION_STATUS.md  OUTLINE2.md  RETRAIN_ACTION_PLAN.md  TRASH_SUBTYPE_GUIDE.md
docs/paper/: BAO_CAO_DO_AN_GREENLENS_VI.docx  BAO_CAO_DO_AN_GREENLENS_VI.md  CHECKPOINT_E1_KAGGLE_VI.md  GDOC_PATCHES_BY_SECTION.md  GREENLENS_IEEE_FULL_DRAFT_PASTE.txt  GREENLENS_PAPER_DRAFT_FROM_CODE_VI.md  GREENLENS_SCIENTIFIC_PAPER.docx  GREENLENS_SCIENTIFIC_PAPER.md  HUONG_DAN_THAY_THE_CON_LAI.md  (+4 more)
scripts/: download_baseline_weights.py
tests/: conftest.py
(+41 files in other folders)
