[project]
name = "greenlens-detection-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "pillow>=12.0.0",
    "pillow-heif>=0.21.0",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "structlog>=25.5.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "ultralytics>=8.4.0",
    "uvicorn[standard]>=0.46.0",
    "wandb>=0.26.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
